2001-01-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html: increased version number to 2.3.27

2000-12-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	upped beta release number

2000-12-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.26

2000-03-31  olicha  <olivier.chapuis@free.fr>

	* index.html:
	Remove the link to acknowledgements

2000-12-18  Mikhael Goikhman  <migo@homemail.com>

	* generated/txt2html.sh: add <b> and <hr> in some places
	* generated/AUTHORS.html: a new autogenerated file
	* acknowledgements.html: updated and added a link to AUTHORS
	* index.html: added a link to acknowledgements
	* generated/{FAQ,NEWS}.html: regenerated

2000-12-06  Mikhael Goikhman  <migo@homemail.com>

	* index.html, download.html: increased version number to 2.3.25
	* generated/NEWS.html: regenerated

	* icons.html:
	corrected all links - removed ftp: url scheme (this is incorrect) and
	incomplete http: url scheme (this is bad and not supported by lynx)

2000-11-30  Mikhael Goikhman  <migo@homemail.com>

	* index.html, download.html: increased version number to 2.3.24

2000-11-26  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	remove "NEWS FLASH", show a beta version too, use 2 columns
	* download.html:
	separate links to tar.gz and tar.bz2 packages

	* fvwm-cats/index.html:
	* fvwm-cats/cassy.jpg:
	* fvwm-cats/murzilka.jpg:
	new photos and info about my cats

	* generated/{FAQ,NEWS}.html:
	regenerated

2000-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.23

2000-11-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	added to trivia

2000-11-11  Mikhael Goikhman  <migo@homemail.com>

	* download.html: increased version number to 2.3.22
	* mod_initialization.html: updated info about module arg 3

2000-10-27  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Add borders, vertically align to the top.