@@ -14,22 +14,22 @@
 <br><hr>
 
 <!--
-<h3><font color="yellow">NEWS FLASH!</font></h3>
 <blockquote>
+<h3><font color="yellow">NEWS FLASH!</font></h3>
 <p>
-FVWM 2.2.4, a stable bugfix release, is now available for
-<a href="download.html">download</a>!
-  -->
+FVWM 2.2.4, a stable bugfix release, is now available for download!
+<hr>
+</blockquote>
+-->
 
 <p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
 manager for the X Window system. <a href="download.html">Get</a> your copy.
-<!-- </blockquote> -->
 
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
-  <tr><td>Latest Stable Release: <td><b>2.2.4</b></tr>
-  <tr><td>Latest Beta Release: <td><b>2.3.27</b></tr>
+  <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.4</b></tr>
+  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.27</b></tr>
 </table>
 </blockquote>
 
@@ -56,12 +56,13 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
   <li><a href="http://yyy.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Reporting</a>
   <li><a href="developers.html">Developer Info (CVS, Modules)</a>
 <!--  <li><a href="acknowledgements.html">Acknowledgements</a> -->
+  <li><a href="generated/AUTHORS.html">Acknowledgements</a>
   <li><a href="fvwm-cats/">Other Important Info ^_^</a>
 </ul>
 </tr></table>
 
 <hr>
 Created: Jan 31, 1996 *
-Last modified: Dec 18, 2000
+Last modified: Jan 4, 2000
 </body>
 </html>
