@@ -1,3 +1,8 @@
+2001-01-04  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.html:
+	added a link to AUTHORS and minor spacing needed for some browsers
+
 2001-01-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
@@ -12,7 +17,7 @@
 
 	* download.html: increased version number to 2.3.26
 
-2000-03-31  olicha  <olivier.chapuis@free.fr>
+2000-12-20  olicha  <olivier.chapuis@free.fr>
 
 	* index.html:
 	Remove the link to acknowledgements
